Added get allowlists and get allowlist endpoints
