# src/controllers/index.ts
@@ -4,6 +4,9 @@ export { getAllAlerts, getAlertById, getAlertStats, deleteAlert } from './alerts
 // Decision controllers
 export { getAllDecisions, getDecisionById, getDecisionStats, createDecision, deleteDecision } from './decisions';
 
+// Allowlist controllers
+export { getAllowlists, getAllowlistByName } from './allowlists';
+
 // Statistics controllers
 export { 
   getStatistics, 
